[gd_scene load_steps=7 format=3 uid="uid://dru54dfjnwmqw"]

[ext_resource type="Script" path="res://control_screen.gd" id="1_aluup"]
[ext_resource type="Texture2D" uid="uid://bbp8sir1v1b6" path="res://white-button.svg" id="1_fp8yv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djre2"]
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6eu3"]
bg_color = Color(0.964706, 0.564706, 0.145098, 1)
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0o8x"]
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
corner_radius_bottom_right = 20
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ojbmh"]

[node name="ControlScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aluup")

[node name="OverallBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.196078, 0.25098, 1)

[node name="PanelContainer" type="VBoxContainer" parent="OverallBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -295.0
offset_right = 149.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopPanel" type="Panel" parent="OverallBG/PanelContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 530)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_djre2")

[node name="OrangeBackground" type="Panel" parent="OverallBG/PanelContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6eu3")

[node name="Label" type="Label" parent="OverallBG/PanelContainer/TopPanel/OrangeBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_top = 37.0
offset_right = 121.5
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Orange Background"

[node name="GreyBackground" type="Panel" parent="OverallBG/PanelContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s0o8x")

[node name="Label" type="Label" parent="OverallBG/PanelContainer/TopPanel/GreyBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -19.0
offset_right = 104.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Grey Background"

[node name="TabPanel" type="Panel" parent="OverallBG/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ojbmh")

[node name="OrangeButton" type="TextureButton" parent="OverallBG/PanelContainer/TabPanel"]
self_modulate = Color(0.964706, 0.564706, 0.145098, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_bottom = 60.0
grow_horizontal = 0
texture_normal = ExtResource("1_fp8yv")
ignore_texture_size = true
stretch_mode = 4
flip_h = true

[node name="Label" type="Label" parent="OverallBG/PanelContainer/TabPanel/OrangeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -16.0
offset_right = 62.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Account Details"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GreyButton" type="TextureButton" parent="OverallBG/PanelContainer/TabPanel"]
self_modulate = Color(0.286275, 0.294118, 0.352941, 1)
layout_mode = 1
offset_right = 176.0
offset_bottom = 60.0
texture_normal = ExtResource("1_fp8yv")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="OverallBG/PanelContainer/TabPanel/GreyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -16.0
offset_right = 22.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.427643, 0.437765, 0.512313, 1)
theme_override_font_sizes/font_size = 10
text = "Primary on"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="OverallBG/PanelContainer/TabPanel/OrangeButton" to="." method="_on_orange_button_pressed"]
[connection signal="pressed" from="OverallBG/PanelContainer/TabPanel/GreyButton" to="." method="_on_grey_button_pressed"]
